# NFA

./: CMakeLists.txt  README.md
app/: run.cpp
examples/: example.nfa
include/: LoadNFA.hpp  Transitions.hpp
src/: LoadNFA.cpp  Transitions.cpp
